--- a/demosqlc/src/main/resources/application.properties
+++ b/demosqlc/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://root@localhost:3306/sqldemo?useUnicode=true&charseterEncoding=UTF-8&serverTimezone=EST
 spring.datasource.username=root
-spring.datasource.password=3770
+# spring.datasource.password=?
 
 logging.level.root = INFO
 logging.file.name=./log/spring.log
